Fixed invisible error message css issue

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -1194,13 +1194,12 @@ div.content p.error {
 
 .error a {
   font-weight: 600;
-  color: $default-btn-color;
+  color: black;
   text-decoration: underline;
 }
 
 .error a:link {
   font-weight: 600;
-  color: $default-btn-color;
   text-decoration: underline;
 }
 
